# Minimal-ZeRO-2

./: CMakeLists.txt  README.md  main.cu  model.cu  model.h  run.sh  utils.cu  utils.h  zero_optimizer.cu  zero_optimizer.h
